--- a/resources/new_relic_agent/newrelic.yml
+++ b/resources/new_relic_agent/newrelic.yml
@@ -5,6 +5,7 @@
 # This section is for settings common to all environments.
 # Do not add anything above this next line.
 common: &default_settings
+  sync_startup: true
 
   # ============================== LICENSE KEY ===============================
   # You must specify the license key associated with your New Relic
